# chatgpt-api-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/chatgpt_app/: __init__.py  cli.py  config.py  controller.py  services.py  validators.py
tests/: test_cli.py  test_controller.py  test_services.py  test_validators.py
