[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-console-academico"
version = "0.1.0"
description = "Aplicacao de console integrada com a API da OpenAI."
requires-python = ">=3.12"
dependencies = [
    "openai>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

